// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blob-reader blob fetchBlob fetch raw blob and update blob.lines property 1`] = `
Array [
  Object {
    "lineNumber": 1,
    "value": "// Most popular rabbit names",
  },
  Object {
    "lineNumber": 2,
    "value": "",
  },
  Object {
    "lineNumber": 3,
    "value": "Thumper",
  },
  Object {
    "lineNumber": 4,
    "value": "Daisy",
  },
]
`;

exports[`blob-reader blob internals 1`] = `
Array [
  Object {
    "lineNumber": 1,
    "value": "// Most popular rabbit names",
  },
  Object {
    "lineNumber": 2,
    "value": "",
  },
  Object {
    "lineNumber": 3,
    "value": "Thumper",
  },
  Object {
    "lineNumber": 4,
    "value": "Daisy",
  },
]
`;

exports[`blob-reader blob toJSON() returns a JSON representation of the blobs content 1`] = `
Object {
  "foo": "bar",
}
`;

exports[`blob-reader blob toString() returns a string representation of the blobs content 1`] = `
"a
b"
`;

exports[`blob-reader diff split left internals 1`] = `
Array [
  Object {
    "lineNumber": 1,
    "value": "// Most popular rabbit names",
  },
  Object {
    "lineNumber": 2,
    "value": "",
  },
  Object {
    "lineNumber": 3,
    "value": "Thumper",
  },
  Object {
    "lineNumber": 4,
    "value": "Daisy",
  },
  Object {
    "lineNumber": 5,
    "value": "Lily",
  },
]
`;

exports[`blob-reader diff split left toString() 1`] = `
"// Most popular rabbit names

Thumper
Daisy
Lily"
`;

exports[`blob-reader diff split right internals 1`] = `
Array [
  Object {
    "lineNumber": 1,
    "value": "// Most popular rabbit names",
  },
  Object {
    "lineNumber": 2,
    "value": "",
  },
  Object {
    "lineNumber": 3,
    "value": "Thumper",
  },
  Object {
    "lineNumber": 4,
    "value": "Mozart",
  },
  Object {
    "lineNumber": 5,
    "value": "Daisy",
  },
  Object {
    "lineNumber": 6,
    "value": "Annelie",
  },
]
`;

exports[`blob-reader diff split right toString() 1`] = `
"// Most popular rabbit names

Thumper
Mozart
Daisy
Annelie"
`;

exports[`blob-reader diff unified left internals 1`] = `
Array [
  Object {
    "lineNumber": 1,
    "value": "// Most popular rabbit names",
  },
  Object {
    "lineNumber": 2,
    "value": "",
  },
  Object {
    "lineNumber": 3,
    "value": "Thumper",
  },
  Object {
    "lineNumber": 5,
    "value": "Daisy",
  },
  Object {
    "lineNumber": 5,
    "value": "Lily",
  },
]
`;

exports[`blob-reader diff unified left toString() 1`] = `
"// Most popular rabbit names

Thumper
Daisy
Lily"
`;

exports[`blob-reader diff unified right internals 1`] = `
Array [
  Object {
    "lineNumber": 1,
    "value": "// Most popular rabbit names",
  },
  Object {
    "lineNumber": 2,
    "value": "",
  },
  Object {
    "lineNumber": 3,
    "value": "Thumper",
  },
  Object {
    "lineNumber": 4,
    "value": "Mozart",
  },
  Object {
    "lineNumber": 5,
    "value": "Daisy",
  },
  Object {
    "lineNumber": 6,
    "value": "Annelie",
  },
]
`;

exports[`blob-reader diff unified right toString() 1`] = `
"// Most popular rabbit names

Thumper
Mozart
Daisy
Annelie"
`;

exports[`blob-reader gist internals 1`] = `
Array [
  Object {
    "lineNumber": 1,
    "value": "Max",
  },
  Object {
    "lineNumber": 2,
    "value": "Buddy",
  },
  Object {
    "lineNumber": 3,
    "value": "Charlie",
  },
]
`;

exports[`blob-reader issue internals 1`] = `
Array [
  Object {
    "lineNumber": 1,
    "value": "import os",
  },
]
`;
